Fixes anchor scroll for each element w/o gap

--- a/wwwroot/css/style.css
+++ b/wwwroot/css/style.css
@@ -160,9 +160,12 @@ section.success {
     margin-top:30px;
 }
 
-.wrapper-div {
+/* to compensate for header in anchor scroll */
+a.anchor {
+    display: block;
     position: relative;
-    top: 75px;
+    top: -75px;
+    visibility: hidden;
 }
 
 /* NAVBAR ELEMENTS ********************************************************/
@@ -419,6 +422,7 @@ header .menu-icon i:hover{
 
 
 /* FEATURE ELEMENTS *****************************************************/
+
 .feature-header {
     margin: 0 0 40px 0;
     text-align: center;
@@ -511,6 +515,7 @@ header .menu-icon i:hover{
 #faq{
     background-color: #ee8d52;
 }   
+
 
 
 /* ABOUT ELEMENTS *********************************************************/
@@ -1308,9 +1313,6 @@ border-top: 22px solid #3fbfE1;
     
     
 /* FAQ ELEMENTS ****************************************************************/
-    #faq {
-        padding-bottom: 25px;
-    }
     .faq-question{
         font-style: italic;
             font-size: 1.5em;    
